# chinese-characters-recognition

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo-gb2312.c  demo-int-char.c  demo-utf8.c  gb2312.c
